--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,8 @@
 =================================*/
 @import "productTemplate-1";
 @import "productTemplate-2";
+@import "productTemplate-3";
+@import "productTemplate-4";
 
 
 
