--- a/scss/productTemplate-2.scss
+++ b/scss/productTemplate-2.scss
@@ -1,7 +1,7 @@
 #productTemplate-2{
 	position: relative;
 	font-family: georgia;
-	min-height: 700px;
+	min-height: 600px;
 	height: auto;
 	background: #F3F6F8;
 	overflow: hidden;
@@ -59,12 +59,26 @@
 
 
 					a{
-						font-size: 10px;
-						margin-top: 20px;
-						font-family: arial;
-						color:#b5b3b3;
-						font-weight: 700;
-						padding-bottom: 60px;
+					  font-size: 10px;
+					  margin-top: 20px;
+					  font-family: arial;
+					  color: #b5b3b3;
+					  font-weight: 700;
+					  padding-bottom: 0px;
+					  border: 1px solid #b5b3b3;
+					  text-align: center;
+					  line-height: 40px;
+					  width: 160px;
+					  margin-bottom: 30px;
+					  -webkit-transition: background 400ms ease-in-out;
+					  -moz-transition: background 400ms ease-in-out;
+					  -o-transition: background 400ms ease-in-out;
+					  transition: background 400ms ease-in-out;
+
+					 &:hover{
+					 	background: #000;
+					 	color:#fff;
+					 }
 					}
 				}
 			}
