--- a/scss/productTemplate-1.scss
+++ b/scss/productTemplate-1.scss
@@ -54,7 +54,7 @@
 					p{
 						font-size: 12px;
 						margin-top: 10px;
-						color:#616161;
+						color:#8E8E8E;
 						padding-bottom: 15px;
 						line-height: 1.5;
 					}
